# controller/user_controlle.go
@@ -6,6 +6,7 @@ import (
 	"BlockApp/model"
 	"github.com/gin-gonic/gin"
 	"github.com/golang-jwt/jwt/v4"
+	"golang.org/x/crypto/bcrypt"
 	"net/http"
 	"time"
 )
@@ -51,8 +52,13 @@ func (uc *UserController) UserLogin(ctx *gin.Context) {
 	result := db.PgsqlDB.First(&user, "name = ?", creds.Username)
 	if result.Error != nil {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
 	}
-
+	// 使用bcrypt库对密码进行校验
+	if err := bcrypt.CompareHashAndPassword([]byte(user.PassWord), []byte(creds.Password)); err != nil {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Wrong username or password"})
+		return
+	}
 	// 生成Token
 	token, err := generateToken(creds.Username)
 	if err != nil {
@@ -61,6 +67,45 @@ func (uc *UserController) UserLogin(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, gin.H{"token": token})
+}
+
+// UserRegister 用户注册
+// @Summary 用户注册(暂时不开放)
+// @Description 通过用户名和密码注册新用户(暂时不开放)
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param request body Creds true "用户注册信息"
+// @Success 200 {object} map[string]string "注册成功"
+// @Failure 400 {object} map[string]string "请求错误"
+// @Failure 500 {object} map[string]string "服务器错误"
+// @Router /v1/register [post]
+func (uc *UserController) UserRegister(ctx *gin.Context) {
+	var creds Creds
+	if err := ctx.ShouldBindJSON(&creds); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+		return
+	}
+	var user = model.User{Name: creds.Username}
+	// 校验用户名密码
+	result := db.PgsqlDB.First(&user, "name = ?", creds.Username)
+	if result.Error == nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "User is exited"})
+		return
+	}
+	_password, err := bcrypt.GenerateFromPassword([]byte(creds.Password), bcrypt.DefaultCost)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Could not generate password"})
+		return
+	}
+	user.PassWord = string(_password)
+	user.Role = "USER"
+	if err := db.PgsqlDB.Create(&user).Error; err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Could not create user"})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{"message": "User registered successfully"})
+
 }
 
 func protectedHandler(c *gin.Context) {
